--- a/src/config/config.json
+++ b/src/config/config.json
@@ -3,5 +3,16 @@
         "model_name": "all-mpnet-base-v2",
         "batch_size": 256
     },
+    "generate_queries": {
+        "enable": true,
+        "output_path": "data/pseudo_queries.csv",
+        "model_name": "unsloth/llama-3-8b-Instruct-bnb-4bit",
+        "temperature": 0.7,
+        "max_tokens": 128,
+        "max_seq_length": 2048,
+        "load_in_4bit": true,
+        "batch_size": 16,
+        "max_rows": 24000
+    },
     "device": "cuda"
 }
