--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ torch
 sentence-transformers
 groq
 unsloth @ git+https://github.com/unslothai/unsloth.git
+unsloth_zoo
+bitsandbytes
+accelerate
+peft
+trl<0.9.0
