--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,4 @@ kagglehub
 python-dotenv
 torch
 sentence-transformers
-groq
-unsloth @ git+https://github.com/unslothai/unsloth.git
-unsloth_zoo
-bitsandbytes
-accelerate
-peft
-trl<0.9.0
+google-generativeai
