--- a/src/config/config.json
+++ b/src/config/config.json
@@ -6,13 +6,11 @@
     "generate_queries": {
         "enable": true,
         "output_path": "data/pseudo_queries.csv",
-        "model_name": "unsloth/llama-3-8b-Instruct-bnb-4bit",
+        "model_name": "models/gemini-2.0-flash",
         "temperature": 0.7,
-        "max_tokens": 128,
-        "max_seq_length": 2048,
-        "load_in_4bit": true,
+        "max_tokens": 1024,
         "batch_size": 16,
-        "max_rows": 24000
+        "max_rows": 119955
     },
     "device": "cuda"
 }
