--- a/src/config/common_config.json
+++ b/src/config/common_config.json
@@ -1,8 +1,4 @@
 {
-    "embedding": {
-        "model_name": "all-mpnet-base-v2",
-        "batch_size": 256
-    },
     "generate_queries": {
         "enable": false,
         "output_path": "data/pseudo_queries.csv",
@@ -11,6 +7,13 @@
         "max_tokens": 1024,
         "batch_size": 16,
         "max_rows": 119955
+    },
+    "data": {
+        "path": "data/winemag-data-130k-v2.csv",
+        "query_path": "data/pseudo_queries.csv",
+        "val_size": 0.1,
+        "test_size": 0.1,
+        "num_negatives": 2
     },
     "device": "cuda",
     "random_state": 42
