--- a/src/config/baseline_config.json
+++ b/src/config/baseline_config.json
@@ -16,7 +16,7 @@
         "num_negatives": 2
     },
     "model": {
-        "type": "bi-encoder",
+        "type": "baseline-bi-encoder",
         "path": "src/model/baseline_model.py",
         "model_name": "all-mpnet-base-v2",
         "batch_size": 256,
