--- a/config/biencoder_config.json
+++ b/config/biencoder_config.json
@@ -1,6 +1,16 @@
 {
+    "generate_queries": {
+        "enable": false,
+        "output_path": "data/pseudo_queries.csv",
+        "model_name": "models/gemini-2.0-flash",
+        "temperature": 0.7,
+        "max_tokens": 1024,
+        "batch_size": 16,
+        "max_rows": 119955
+    },
     "data": {
         "path": "data/winemag-data-130k-v2.csv",
+        "embedding_path": "data/embeddings/baseline_faiss.index",
         "query_path": "data/pseudo_queries.csv",
         "val_size": 0.1,
         "test_size": 0.1,
