--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Data files
 data/winemag-data-130k-v2.csv
+data/embeddings
 
 # Virtual Environment
 .venv/
@@ -16,7 +17,6 @@ __pycache__/
 
 # Jupyter Notebook
 .ipynb_checkpoints/
-*.ipynb
 
 # IDE
 .vscode/
