--- a/config/baseline_config.json
+++ b/config/baseline_config.json
@@ -10,6 +10,7 @@
     },
     "data": {
         "path": "data/winemag-data-130k-v2.csv",
+        "embedding_path": "data/embeddings/baseline_faiss.index",
         "query_path": "data/pseudo_queries.csv",
         "val_size": 0.1,
         "test_size": 0.1,
@@ -18,9 +19,11 @@
     "model": {
         "type": "baseline-bi-encoder",
         "path": "src/model/baseline_model.py",
-        "model_name": "all-mpnet-base-v2",
-        "batch_size": 256,
-        "tok_k": 10
+        "model_name": "all-mpnet-base-v2"
+    },
+    "evaluate": {
+        "top_k": 10,
+        "batch_size": 256
     },
     "device": "cuda",
     "random_state": 42
