--- a/config/baseline_config.json
+++ b/config/baseline_config.json
@@ -10,7 +10,6 @@
     },
     "data": {
         "path": "data/winemag-data-130k-v2.csv",
-        "embedding_path": "data/embeddings/baseline_faiss.index",
         "query_path": "data/pseudo_queries.csv",
         "val_size": 0.1,
         "test_size": 0.1,
@@ -23,7 +22,8 @@
     },
     "evaluate": {
         "top_k": 10,
-        "batch_size": 256
+        "batch_size": 256,
+        "embedding_path": "data/embeddings/baseline_faiss.index"
     },
     "device": "cuda",
     "random_state": 42
